objects/UserSkill__c.object
<CustomObject>
    <fields>
        <fullName>EngineValueLevel__c</fullName>
        <formula>if( ISBLANK(Level__c ) ,&apos;&apos;,
text( ParamNumber__c ) + &apos;;&apos; + Value__c + &apos;;&apos;+ Level__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EngineValueLevel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EngineValue__c</fullName>
        <formula>text( ParamNumber__c ) + &apos;;&apos; + Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EngineValue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParamNumber__c</fullName>
        <label>ParamNumber</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parameter__c</fullName>
        <label>Parameter</label>
        <picklist>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UserData__c</fullName>
        <label>UserData</label>
        <referenceTo>UserData__c</referenceTo>
        <relationshipLabel>UserSkills</relationshipLabel>
        <relationshipName>UserSkills</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>baseObject__c</fullName>
        <label>baseObject</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>UserSkill</label>
    <listViews>
        <fullName>All</fullName>
        <columns>UserData__c</columns>
        <columns>Parameter__c</columns>
        <columns>Value__c</columns>
        <columns>Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>UserSkill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UserSkills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>